# FailSafe

./: .gitmodules  CLAUDE.md
agent-readiness-lab/: .dockerignore  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
agent-readiness-lab/apps/api/: Dockerfile  __init__.py  dependencies.py  main.py  routes.py
agent-readiness-lab/apps/webapp/: Dockerfile  __init__.py  main.py
agent-readiness-lab/apps/worker/: Dockerfile  __init__.py  main.py  tasks.py  worker.py
agent-readiness-lab/examples/traces/: checkout_failure_retry.jsonl  search_empty_results.jsonl  successful_checkout.jsonl
agent-readiness-lab/migrations/: env.py
agent-readiness-lab/migrations/versions/: 001_initial.py
agent-readiness-lab/scripts/: demo.sh
agent-readiness-lab/tests/: __init__.py  conftest.py  test_mutator.py  test_scoring.py  test_traces.py
failsafe-pip-package/: =1.6.0  README.md  TODO.md  pyproject.toml
failsafe-pip-package/examples/: before_demo.py  callback_observability.py  dashboard_demo.py  quickstart_langchain.py  quickstart_observe.py
failsafe-pip-package/failsafe/: __init__.py  observe.py
failsafe-pip-package/failsafe/core/: engine.py  policy.py
failsafe-pip-package/failsafe/dashboard/: events.py  server.py
failsafe-pip-package/failsafe/dashboard/frontend/: package-lock.json
failsafe-pip-package/failsafe/dashboard/frontend/src/: App.jsx  styles.css
failsafe-pip-package/failsafe/dashboard/frontend/src/components/: AgentGraph.jsx  ContractCoverage.jsx  ContractDetail.jsx  DataFlow.jsx  Icons.jsx  (+4 more)
failsafe-pip-package/failsafe/integrations/: autogen.py  crewai.py  openai_agents.py
failsafe-pip-package/failsafe/integrations/langchain/: callback.py  decorators.py
failsafe-pip-package/scripts/: build_dashboard.sh
failsafe-pip-package/tests/: test_dashboard.py  test_dashboard_payload_integration.py  test_e2e_observe.py  test_framework_adapters.py  test_langchain_callback.py  test_langchain_decorators.py  test_observe.py  test_payload_visibility.py  test_policy.py  test_validator.py
mos/: .gitignore  CLAUDE.md  ROADMAP.md  engine.py  finance.py  financial_agents.py  logger.py  middleware.py  models.py  pyproject.toml  test_api.py  test_cli.py  test_core.py  test_langgraph.py
mos/agentpact/: __init__.py  api.py  cli.py
mos/agentpact/audit/: logger.py
mos/agentpact/core/: engine.py  models.py
mos/agentpact/integrations/: langgraph.py
mos/agentpact/interceptor/: middleware.py
mos/agentpact/policies/: finance.py
mos/dashboard/: app.py  index.html
mos/docs/: explanation.md
mos/examples/: langgraph_financial_agents.py  quickstart.py
(+42 files in other folders)
