[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failsafe-ai"
version = "0.1.1"
description = "Contract testing and compliance validation for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "click>=8.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
failsafe = "failsafe.cli:main"

[tool.setuptools.packages.find]
include = ["failsafe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
