[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentpact"
version = "0.1.0"
description = "Contract testing and compliance validation for multi-agent AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
]
integrations = [
    "a2a-python",
    "langgraph",
    "pyyaml>=6.0",
]
all = [
    "agentpact[dev,server,integrations]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentpact*"]
